@@ -71,6 +71,9 @@
                 <param name="sortby" value="year" />
                 <param name="sortorder" value="ascending" />
                 <param name="controltype" value="fixedlist" />
+                <param name="labelinclude" value="Defs_Null" />
+                <param name="landscapelabelinclude" value="View_Widget_LandscapeLabel" />
+                <param name="label2" value="ListItem.TvShowTitle" />
                 <onup>5600</onup>
                 <focusposition>3</focusposition>
                 <movement>3</movement>
