@@ -155,7 +155,7 @@
         <param name="smalllandscapecondition" default="false" />
         <param name="smallsquarecondition" default="false" />
         <param name="height" default="item_row_height" />
-        <param name="top" default="397.5" />
+        <param name="top" default="442.5" />
         <param name="landscapelabelinclude" default="View_51_Wall_Landscape_Home_Label" />
         <param name="smalllandscapelabelinclude" default="View_51_Wall_SmallLandscape_Home_Label" />
         <param name="squarelabelinclude" default="View_51_Wall_SmallSquare_Home_Label" />
