@@ -1,6 +1,7 @@
 0.9.44
 - Fix for plot overlay auto display
 - Remove extendedinfo completely
+- Update submenu hubs to new widget styles
 
 0.9.43
 - Add DBID icons to 1136 person info
